# carcal

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
docs/: index.html
editors/: Makefile
editors/vscode-posa/: README.md  language-configuration.json  package.json
grammars/: posa.tmLanguage.json
packaging/: appimage.sh  build.sh  bundle-linux.sh  bundle-macos.sh  bundle-windows.sh  caracal.desktop  carcal.desktop  carcal.nsi  macos-dmg.sh  macos-pkg.sh  wheel.py  windows-installer.sh
protos/: tftp.posa
scripts/: fields.lua  mysql-queries.lua  summary.lua  tftp.lua
src/: about_image.h  caracal.h  carcal.h  colorrules.c  dissect.c  field.c  filter.c  lua_run.c  main.c  posa.c  rules.c  source.c
tools/: img2c.py
